# solarDM

./: CMakeLists.txt  README.md  SecondaryBodyKKaxions.cpp  Tcaptura.cpp  dimensionar.cpp  scapevel.cpp  solarDM.cpp  velocidadradial.cpp  verlet  verlet struct.cpp  verlet_adaptativo.cpp
